# TheHand

./: .gitignore  GEMINI.md  README.md  pyproject.toml
showcase/: development.py  game.py  game_dev.py  production.py  show_game.py  show_game_dev.py  show_scene_manager.py  show_speech_recognition.py  show_vision.py
src/: dev.py  enums.py  game.py  main.py  prod.py  test_audition.py  test_scene_manager.py  test_vision.py
src/audition/: audition.py  speech_recognition.py  text_processor.py
src/engine/entity/: entity_manager.py
src/engine/scene/: renderer.py  scene.py  scene_manager.py  updater.py
src/thehand/: __init__.py
src/thehand/core/: __init__.py  configs.py  entity.py  event.py  game.py  state.py  store.py  types.py  utils.py
src/thehand/core/audition/: __init__.py  audition.py  base_audition.py  base_text_processor.py  speech_recognition.py  text_processor.py
src/thehand/core/entity/: __init__.py
src/thehand/core/game/: __init__.py  basegame.py
src/thehand/core/scene/: __init__.py  renderer.py  scene.py  scene_manager.py  scene_state.py  updater.py
src/thehand/core/state/: __init__.py  (+1 more)
src/thehand/engine/: __init__.py  configs.py
src/thehand/examples/: event.py
src/thehand/game/: __init__.py  callbacks.py  configs.py  dev.py  game.py  opening_scene.py  prod.py
src/vision/: hand_landmarker.old.py  vision.py
src/vision/face/: face.py  face_landmarker.py  face_processor.py
src/vision/hand/: hand.py  hand_landmarker.py  hand_processor.py
src/vision/pose/: pose.py  pose_landmarker.py  pose_processor.py
src/vision/utils/: utils.py
(+111 files in other folders)
