[project]
name = "thehand"
version = "0.0.1"
description = "TheHand's game project."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "auto-py-to-exe>=2.47.0",
    "imutils>=0.5.4",
    "mediapipe>=0.10.21",
    "pygame-ce>=2.5.5",
    "pymunk>=7.1.0",
    "silero-vad>=6.0.0",
    "sounddevice>=0.5.2",
    "useful-moonshine-onnx",
]

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    '**/*venv/**\*',
]

[tool.ruff]
line-length = 120

[tool.ty.rules]
unresolved-attribute = "ignore"
invalid-argument-type = "ignore"

[tool.uv.sources]
useful-moonshine-onnx = { git = "https://github.com/moonshine-ai/moonshine.git", subdirectory = "moonshine-onnx" }

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]
